@@ -20,11 +20,6 @@ Obtainable Nether Portals
 	to taint emerald into obsidian and create portal (and
 	possibly spawn some consequences).
 
-Renewable Redstone Catch-22
-	Requires a hibachi, which requires redstone.  Maybe
-	grind gold and hellfire together instead of melt,
-	for a low-efficiency bootstrap alternative?
-
 Renewable Glowstone
 	Ideas:
 	- Concentrate sunlight using a lens, directly into a block
